--- a/app/src/main/res/layout/activity_dat_hang.xml
+++ b/app/src/main/res/layout/activity_dat_hang.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <include layout="@layout/toolbar_out"/>
+
+        <include layout="@layout/toolbar_out" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,13 +24,13 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_marginHorizontal="10dp"
                 android:src="@drawable/baseline_map_24" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
@@ -37,9 +38,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="5dp"
-                    android:layout_marginVertical="10dp"
+                    android:layout_marginVertical="2dp"
                     android:text="Địa chỉ nhận hàng"
-                    android:textSize="20dp" />
+                    android:textSize="18dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -47,7 +48,7 @@
                     android:layout_marginHorizontal="5dp"
                     android:layout_marginBottom="3dp"
                     android:text="Họ và tên : Đỗ Văn Hải"
-                    android:textSize="20dp" />
+                    android:textSize="18dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -55,7 +56,7 @@
                     android:layout_marginHorizontal="5dp"
                     android:layout_marginBottom="3dp"
                     android:text="Số điện thoại : 0356002574"
-                    android:textSize="20dp" />
+                    android:textSize="18dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -63,8 +64,18 @@
                     android:layout_marginHorizontal="5dp"
                     android:layout_marginBottom="3dp"
                     android:text="Địa chỉ : động phí phương tú ứng hòa"
-                    android:textSize="20dp" />
+                    android:textSize="18dp" />
             </LinearLayout>
+            <TextView
+                android:id="@+id/id_address"
+                android:layout_width="wrap_content"
+                android:gravity="center"
+                android:layout_height="30dp"
+                android:textColor="#2196F3"
+                android:text="Thay đổi"
+                android:layout_gravity="center"
+               />
+
         </LinearLayout>
 
         <LinearLayout
