--- a/app/src/main/res/layout/activity_gio_hang.xml
+++ b/app/src/main/res/layout/activity_gio_hang.xml
@@ -16,13 +16,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <ImageView
+            android:id="@+id/out_giohang"
+            android:layout_width="40dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:src="@drawable/baseline_arrow_back_24" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_marginVertical="10dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="50dp"
             android:paddingLeft="20dp"
-            android:text="Gio hang"
+            android:text="Giỏ hàng"
             android:textSize="25dp" />
 
         <ImageView
@@ -92,10 +102,12 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_dat"
         android:layout_width="150dp"
-        android:layout_height="70dp"
+        android:layout_height="50dp"
         android:background="#F44336"
         android:text="Mua ngay"
         android:textColor="@color/white"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lv_list"
