--- a/app/src/main/res/layout/dialog_doimk.xml
+++ b/app/src/main/res/layout/dialog_doimk.xml
@@ -10,7 +10,7 @@
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
-       android:textColor="@color/black"
+       android:textColor="@color/white"
        android:textSize="20dp"
        android:gravity="center"
        android:background="@drawable/bg_viewdialog_radius_top_left"
@@ -20,47 +20,79 @@
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:orientation="vertical">
-        <EditText
-            android:id="@+id/matkhau"
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:padding="12dp"
-            android:hint="Nhap mat khau "
-            android:background="@drawable/view_bg_edit"/>
-        <EditText
-            android:id="@+id/new_matkhau"
+            android:textColorHint="#0099ff"
+            app:startIconDrawable="@drawable/baseline_lock_24"
+            app:startIconTint="#0099ff"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="#0099ff">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/matkhau"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Mật khẩu cũ"
+                android:inputType="textPassword" />
+        </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:padding="12dp"
-            android:hint="Nhap mat khau moi "
-            android:background="@drawable/view_bg_edit"/>
-        <EditText
-            android:id="@+id/check_mk"
+            android:textColorHint="#0099ff"
+            app:startIconDrawable="@drawable/baseline_lock_24"
+            app:startIconTint="#0099ff"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="#0099ff">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/new_matkhau"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Mật khẩu mới"
+                android:inputType="textPassword" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:padding="12dp"
-            android:hint="Xac nhan  mat khau "
-            android:background="@drawable/view_bg_edit"/>
+            android:textColorHint="#0099ff"
+            app:passwordToggleEnabled="true"
+            app:startIconDrawable="@drawable/baseline_lock_24"
+            app:startIconTint="#0099ff"
+            app:passwordToggleTint="#0099ff">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/check_mk"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Mật khẩu xác nhận"
+                android:inputType="textPassword" />
+        </com.google.android.material.textfield.TextInputLayout>
         
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
             android:orientation="horizontal">
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_cancel"
                 android:layout_width="0dp"
+                android:background="@drawable/background_btn"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/white"
                 android:layout_marginRight="10dp"
                 android:text="Cancel"/>
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_yes"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:background="@drawable/background_btn"
                 android:layout_weight="1"
                 android:text="Yes"/>
 
