--- a/app/src/main/res/layout/fragment_pro_file.xml
+++ b/app/src/main/res/layout/fragment_pro_file.xml
@@ -17,12 +17,12 @@
         android:rowCount="1">
 
         <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/img_user"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_marginLeft="100dp"
             android:layout_marginTop="5dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/li"
             app:shapeAppearanceOverlay="@style/imagview" />
 
         <TextView
@@ -32,7 +32,6 @@
             android:layout_marginLeft="65dp"
             android:fontFamily="sans-serif-medium"
             android:gravity="center"
-            android:text="Họ Và Tên : Đỗ Văn Hải"
             android:textSize="23dp" />
 
         <androidx.appcompat.widget.AppCompatButton
@@ -48,7 +47,7 @@
             />
 
         <androidx.appcompat.widget.AppCompatButton
-
+            android:id="@+id/ed_update"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginLeft="10dp"
@@ -56,7 +55,7 @@
             android:backgroundTint="@color/white"
             android:drawableStart="@drawable/baseline_person_24"
 
-            android:text="Đổi họ tên " />
+            android:text="Đổi thông tin cá nhân" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_mk"
