--- a/app/src/main/res/layout/activity_chitiet_sp.xml
+++ b/app/src/main/res/layout/activity_chitiet_sp.xml
@@ -5,10 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
+
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="650dp"
+        android:layout_height="wrap_content"
         android:background="#F5F5F5">
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -25,7 +28,7 @@
                 <ImageView
                     android:id="@+id/img_sanpham"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="300dp"
                     android:scaleType="centerCrop"
                     android:src="@drawable/li" />
 
@@ -86,18 +89,26 @@
                     android:layout_marginVertical="10dp"
                     android:text="Đánh giá sản phẩm"
                     android:textSize="25dp" />
+                <TextView
+                    android:id="@+id/txt_no"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
+                    android:gravity="center"
+                    android:textColor="#AEA3A3"
+                    android:layout_marginVertical="10dp"
+                    android:text="Chưa có đánh giá nào "
+                    android:textSize="25dp" />
 
                 <ListView
                     android:id="@+id/lv_đanhgia"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="wrap_content" />
+
             </LinearLayout>
 
 
         </LinearLayout>
-
-
-
 
     </ScrollView>
 
