--- a/app/src/main/res/layout/activity_gio_hang.xml
+++ b/app/src/main/res/layout/activity_gio_hang.xml
@@ -4,17 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".View.GioHangActivity">
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/lv_list"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+
+     >
 
         <ImageView
             android:id="@+id/out_giohang"
@@ -61,10 +60,9 @@
 
     <ListView
         android:id="@+id/lv_list"
-        android:layout_width="373dp"
-        android:layout_height="477dp"
+        android:layout_width="411dp"
+        android:layout_height="611dp"
         android:layout_marginBottom="116dp"
-        android:background="#F5F5F5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.488"
