--- a/app/src/main/res/layout/item_sp.xml
+++ b/app/src/main/res/layout/item_sp.xml
@@ -2,10 +2,8 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="5dp"
-    android:layout_marginTop="10dp"
+    android:layout_margin="3dp"
     android:id="@+id/card_view"
-    android:layout_marginRight="5dp"
     android:background="@drawable/view_bg_button"
     android:orientation="vertical">
 <LinearLayout
@@ -24,14 +22,17 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:orientation="vertical"
-        android:padding="10dp">
+        android:paddingLeft="10dp"
+        android:paddingTop="10dp"
+        >
 
         <TextView
             android:id="@+id/txt_tensp"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="5dp"
             android:text="A mua dong"
+            android:fontFamily="sans-serif-black"
             android:textSize="15dp"
 
             />
