--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
+    android:id="@+id/topnavogation"
     >
     <RelativeLayout
         android:layout_width="match_parent"
@@ -13,25 +14,18 @@
             android:orientation="horizontal">
             <EditText
                 android:id="@+id/ed_search"
-                android:layout_width="250dp"
+                android:layout_width="280dp"
                 android:layout_height="40dp"
                 android:layout_marginVertical="10dp"
                 android:backgroundTint="#F1E6E6"
                 android:layout_marginLeft="5dp"
                 android:background="@drawable/view_bg_edit"
-                android:drawablePadding="10dp"
                 android:hint="Tìm Kiếm"
                 android:paddingStart="12dp"
                 android:paddingEnd="12dp"
+                android:inputType="none"
+                android:focusable="false"
                 android:textSize="14dp" />
-            <ImageView
-                android:id="@+id/searchsp"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/baseline_search_24"
-                android:background="#F44336"
-                android:layout_marginVertical="10dp"
-                />
         </LinearLayout>
         <ImageView
             android:id="@+id/img_giohang"
